test/unique/neg/dowith2.check
dowith2.scala:18: error: closure consumes capability of its parameter
  doWithX("test.xml", { f =>
                          ^
one error found
